--- a/Pages/ClinicPatternList.cshtml
+++ b/Pages/ClinicPatternList.cshtml
@@ -60,10 +60,18 @@
 <script>
 
     document.getElementById("btnCancel").addEventListener("click", GoBack);
+    document.onload(HideMenu());
+
+
+    function HideMenu() 
+    {
+        document.getElementById("TopMenu").hidden = true;
+    }
 
     function GoBack() 
     {
-        window.close();
+        //window.close();
+        window.history.back();
     }
 
 </script>
