--- a/Pages/ClinicPatternModify.cshtml
+++ b/Pages/ClinicPatternModify.cshtml
@@ -138,6 +138,13 @@
 
 <script>
     document.getElementById("btnCancel").addEventListener("click", GoBack);
+    document.onload(HideMenu());
+
+
+    function HideMenu() 
+    {
+        document.getElementById("TopMenu").hidden = true;
+    }
 
     function GoBack() 
     {
