Set slot availability

--- a/Pages/ClinicSlotModify.cshtml
+++ b/Pages/ClinicSlotModify.cshtml
@@ -16,6 +16,7 @@
             <div class="col-md-4">
                 <select id="ddlSelectAction" name="sAction">
                     <option value="">Select...</option>
+                    <option value="Open">Mark as free</option>
                     <option value="Unavail">Mark as unavailable</option>
                     <option value="Reserve">Mark as reserved</option>
                     <option value="ForMeOnly">Mark as bookable only by you</option>
