--- a/Pages/AddToWL.cshtml
+++ b/Pages/AddToWL.cshtml
@@ -14,8 +14,28 @@
                 <label>CGU Number (including point):</label>
             </div>
             <div class="col-md-2" style="text-align:right">
-                <input type="text" id="txtCGUNo" name="cgu" />
+                <input type="text" id="txtCGUNo" name="cgu" asp-for=@Model.Patient.CGU_No />
             </div>
+            @if(Model.Patient != null)
+            {
+               <div class="col-md-2">
+                    <label>Linked Referral:</label>
+                </div>
+                <div class="col-md-2">
+                    <select id="ddlRef" name="linkedRef">
+                        <option value="" selected></option>
+                        @if (Model.referralList != null)
+                        {
+                            @foreach (var item in Model.referralList)
+                            {
+                                <option value=@item.RefID>@item.RefType - @item.RefDate, @item.ReferringClinician, @item.ReferringFacility</option>
+                            }
+                        }
+                    </select>
+                </div>
+            }
+        </div>
+        <div class="row mb-5 g-5">
             <div class="col-md-2" style="text-align:right">
                 <label>Clinician:</label>
             </div>
@@ -47,6 +67,21 @@
                 </select>
             </div>
         </div>
+        <div class="row mb-5 g-5">
+            <div class="col-md-2" style="text-align:right">
+                <label>Priority:</label>
+            </div>
+            <div class="col-md-2" style="text-align:right">
+                <select id="ddlVen" name="priorityLevel" />
+                    <option value="" selected></option>
+                        @foreach (var item in Model.priorityList)
+                        {
+                            <option value=@item.PriorityLevel>@item.CLASS - @item.DESCRIPTION</option>
+                        }                   
+                </select>
+            </div>
+        </div>
+
 
         @if(@Model.Patient != null)
         {
@@ -70,7 +105,7 @@
                 <button id="btnConfirm" class="btn btn-success">Confirm</button>
             </div>
             <div class="col-md-2">
-                <button id="btnCancel" class="btn btn-success">Cancel</button>
+                <button type="button" id="btnCancel" class="btn btn-success">Cancel</button>
             </div>
             <div class="col-md-4"></div>
         </div>    
@@ -96,8 +131,8 @@
     }
 
     function GoBack()
-    {
-        window.close();
+    {        
+        window.location.replace("Index");
     }
 
     function HideMenu()
