--- a/Pages/ClinicSetup.cshtml
+++ b/Pages/ClinicSetup.cshtml
@@ -8,19 +8,19 @@
     {
         @if (!Model.isSuccess)
         {
-            <div class="alert alert-danger" style="text-align:center">
+            <div class="alert alert-danger" class="text-center">
                 @Model.Message
             </div>
         }
         else
         {
-            <div class="alert alert-success" style="text-align:center">
+            <div class="alert alert-success" class="text-center">
                 @Model.Message
             </div>
         }
     }
 
-    <h1 style="text-align:center">Create Clinic Schedules</h1>
+    <h1 class="text-center">Create Clinic Schedules</h1>
     
     <div class="row mb-5 g-5">
         <div class="col-md-4">
