--- a/Pages/WLModify.cshtml
+++ b/Pages/WLModify.cshtml
@@ -8,7 +8,7 @@
     <div class="row mb-5 g-5">
         @if(Model.patient != null)
         {
-            <h1 style="text-align:center">Modify Waiting List Entry for @Model.patient.FIRSTNAME @Model.patient.LASTNAME</h1>
+            <h1 class="text-center">Modify Waiting List Entry for @Model.patient.FIRSTNAME @Model.patient.LASTNAME</h1>
         }
     </div>
     <form method="post">
