--- a/Pages/AddToWL.cshtml
+++ b/Pages/AddToWL.cshtml
@@ -6,14 +6,14 @@
 
 <div class="container">
 
-    <h1 style="text-align:center">Add Patient to Waiting List</h1>
+    <h1 class="text-center">Add Patient to Waiting List</h1>
 
     <form id="ApptForm" method="post">
         <div class="row mb-5 g-5">
-            <div class="col-md-2" style="text-align:right">
+            <div class="col-md-2 text-right">
                 <label>CGU Number (including point):</label>
             </div>
-            <div class="col-md-2" style="text-align:right">
+            <div class="col-md-2 text-right">
                 <input type="text" id="txtCGUNo" name="cgu" asp-for=@Model.Patient.CGU_No />
             </div>
             @if(Model.Patient != null)
@@ -36,10 +36,10 @@
             }
         </div>
         <div class="row mb-5 g-5">
-            <div class="col-md-2" style="text-align:right">
+            <div class="col-md-2 text-right">
                 <label>Clinician:</label>
             </div>
-            <div class="col-md-2" style="text-align:right">
+            <div class="col-md-2 text-right">
                 <select id="ddlClin" name="clin" />                
                     <option value="" selected></option>
                     @if (Model.staffMemberList != null)
@@ -51,10 +51,10 @@
                     }
                 </select>
             </div>
-            <div class="col-md-2" style="text-align:right">
+            <div class="col-md-2 text-right">
                 <label>Clinic:</label>
             </div>
-            <div class="col-md-2" style="text-align:right">
+            <div class="col-md-2 text-right">
                 <select id="ddlVen" name="ven" />                
                     <option value="" selected></option>                
                     @if (Model.clinicVenueList != null)
@@ -68,10 +68,10 @@
             </div>
         </div>
         <div class="row mb-5 g-5">
-            <div class="col-md-2" style="text-align:right">
+            <div class="col-md-2 text-right">
                 <label>Priority:</label>
             </div>
-            <div class="col-md-2" style="text-align:right">
+            <div class="col-md-2 text-right">
                 <select id="ddlVen" name="priorityLevel" />
                     <option value="" selected></option>
                         @foreach (var item in Model.priorityList)
