--- a/Pages/AppModify.cshtml
+++ b/Pages/AppModify.cshtml
@@ -3,9 +3,9 @@
 @{
 }
 <div class="container">
-    <h1 style="text-align:center">Modify appt for @Model.patient.FIRSTNAME @Model.patient.LASTNAME</h1>
+    <h1 class="text-center">Modify appt for @Model.patient.FIRSTNAME @Model.patient.LASTNAME</h1>
 
-    <div class="row mb-5 g-5" style="text-align:center">
+    <div class="row mb-5 g-5" class="text-center">
         <h2>@Model.staffMember.NAME, @Model.clinicVenue.NAME, @Model.appointment.BOOKED_DATE.Value.ToString("dd/MM/yyyy") at @Model.appointment.BOOKED_TIME.Value.ToString("HH:mm")</h2>
     </div>
     <form method="post">
