--- a/Pages/ClinicDayView.cshtml
+++ b/Pages/ClinicDayView.cshtml
@@ -106,14 +106,9 @@
                         {
                             <tr id=@item.ToString("HH:mm")>
                                 <th scope="row">@item.ToString("HH:mm")</th>
-                                @*<td id="@(@Model.DateArray[0].ToString("dd/MM/yyyy") + " " + @item.ToString("HH:mm"))" ondrop="OnDrop(event)" ondragover="OnDragOver(event)" ondragleave="OnDragLeave(event)" style="color:white" ondblclick="OnDoubleClickAP(id)"></td>
-                                <td id="@(@Model.DateArray[1].ToString("dd/MM/yyyy") + " " + @item.ToString("HH:mm"))" ondrop="OnDrop(event)" ondragover="OnDragOver(event)" ondragleave="OnDragLeave(event)" style="color:white" ondblclick="OnDoubleClickAP(id)"></td>
-                                <td id="@(@Model.DateArray[2].ToString("dd/MM/yyyy") + " " + @item.ToString("HH:mm"))" ondrop="OnDrop(event)" ondragover="OnDragOver(event)" ondragleave="OnDragLeave(event)" style="color:white" ondblclick="OnDoubleClickAP(id)"></td>
-                                <td id="@(@Model.DateArray[3].ToString("dd/MM/yyyy") + " " + @item.ToString("HH:mm"))" ondrop="OnDrop(event)" ondragover="OnDragOver(event)" ondragleave="OnDragLeave(event)" style="color:white" ondblclick="OnDoubleClickAP(id)"></td>
-                                <td id="@(@Model.DateArray[4].ToString("dd/MM/yyyy") + " " + @item.ToString("HH:mm"))" ondrop="OnDrop(event)" ondragover="OnDragOver(event)" ondragleave="OnDragLeave(event)" style="color:white" ondblclick="OnDoubleClickAP(id)"></td>*@
                                 @foreach (var header in Model.ClinicArray)
                                 {
-                                    <td id="@(@item.ToString("HH:mm")) + ' ' + @header)" style="color:white" ondblclick="OnDoubleClickAP(id)"></td>
+                                    <td id="@(@item.ToString("HH:mm")) + ' ' + @header)" class="whitetext" ondblclick="OnDoubleClickAP(id)"></td>
                                 }
                             </tr>
                         }
