--- a/Pages/Finished.cshtml
+++ b/Pages/Finished.cshtml
@@ -5,12 +5,12 @@
 
 <div class="container">
     <div class="row mb-5 g-5">
-        <h1 style="text-align:center">Done</h1>
+        <h1 class="text-center">Done</h1>
     </div>
 
     <div class="row mb-5 g-5">
        
-            <div class="col-md-2" style="text-align: center">
+            <div class="col-md-2 text-center">
                 <button id="btnClose" class="btn btn-success">Close</button>
             </div>
             <div class="col-md-4"></div>
