--- a/Pages/WIP.cshtml
+++ b/Pages/WIP.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
     <h1 class="text-center">Here be dragons!!!</h1>
 
-    <p style="text-align:center"><img src="~/Images/dragon.jpg" /></p>
+    <p class="text-center"><img src="~/Images/dragon.jpg" /></p>
 
     <h2 class="text-center">(this page is not yet ready, please return from whence thou came)</h2>
 </div>
